botserver/kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gbv-botserver
spec:
  selector:
    app: gbv-botserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
